crates/rargs/tests/snapshots/test_scripts__impl-197.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] extensible.sh example --debug -f"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Here you would call the following command
  external-example --debug -f

