crates/rargs/tests/snapshots/test_scripts__impl-202.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] extensible.sh download -h"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Download a file

[4mAlias:[0m d

[4mUsage:[0m
  download [OPTIONS] SOURCE ...[]
  download -h|--help

[4mArguments:[0m
  SOURCE
    File to download
    [@required]
  EXTERNAL_COMMAND
    External command to run

[4mOptions:[0m
  -h --help
    Print help

